included shared gardens tab

--- a/CS230/calendar.html
+++ b/CS230/calendar.html
@@ -10,7 +10,9 @@
     <link href="css/login.css" rel="stylesheet">
 </head>
 <body>
-  <div class="col-sm-1"></div>
+  <div class="col-sm-1">
+    <button class="btn btn-outline-default" onclick="">Prev. Month</button>
+  </div>
   <div class="col-sm-10">
   <div class="table-responsive-sm">
   <table class="table" style="margin-top: 50px">
@@ -81,8 +83,11 @@
       </tr>
   </tbody>
   </table>
+  <button class="btn btn-outline-default" onclick="window.location.href = 'main.html';">Back to Main Page</button>
   </div>
   </div>
-  <div class="col-sm-1"></div>
+  <div class="col-sm-1">
+    <button class="btn btn-outline-default" onclick="">Next Month</button>
+  </div>
 </body>
 </html>
