--- a/CS230/main2.html
+++ b/CS230/main2.html
@@ -32,7 +32,8 @@
         <a class="navbar-brand" href="#">ACME Seeds</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"; onclick="window.location.href = 'main2.html';"><a href="#">Home</a></li>
+        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="sharedGardens.html">Other Gardens</a></li>
         <!-- <li class="active"; onclick="window.location.href = 'freshStart.html';"><a href="#">Create New</a></li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
