--- a/CS230/freshStart.html
+++ b/CS230/freshStart.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/dashboard/">
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="css/login.css" rel="stylesheet">
+  <title>Create New Template</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<form class="form-signin" style="background-color: #1b1e21">
-    <img class="rounded mx-auto d-block" src="assets/login-logo.png" alt="" width="72px" height="90px">
-    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;"; onclick="window.location.href = 'login.html';"><b> Login</b></button>
-    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;"; onclick="window.location.href = 'main2.html';"><b> Create Garden w/o Account</b></button>
-    <p class="mt-5 mb-3 text-muted" style="text-align: center">&copy; 2020-2021</p>
-</form>
+
+<div class="container">
+  <img class="rounded mx-auto d-block" src="assets/login-logo.png" alt="" width="72px" height="90px">
+
+  <div>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #9fab76; color: #000000;"; onclick="window.location.href = 'login.html';">Login</button>
+  </div>
+  <div>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #9fab76; color: #000000;"; onclick="window.location.href = 'main2.html';">Create Garden w/o Account</button>
+  </div>
+  <p class="mt-5 mb-3 text-muted" style="text-align: center">&copy; 2020-2021</p>
+
+</div>
+
 </body>
 </html>
