--- a/CS230/login.html
+++ b/CS230/login.html
@@ -10,19 +10,19 @@
     <link href="css/login.css" rel="stylesheet">
 </head>
 <body>
-<form class="form-signin" style="background-color: #1b1e21">
+<form class="form-signin" style="background-color: #96bf67">
     <img class="rounded mx-auto d-block" src="assets/login-logo.png" alt="" width="72px" height="90px">
-    <h1 class="h3 mb-3 font-weight-normal" style="color: whitesmoke; text-align: center;">Please sign in</h1>
+    <h1 class="h3 mb-3 font-weight-normal" style="color: #000000; text-align: center;">Please sign in</h1>
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
     <div class="checkbox mb-3">
         <input type="checkbox" value="remember-me" >
-        <label style="color: #ffffff"> Remember me</label>
+        <label style="color: #000000"> Remember me</label>
     </div>
-    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;"; onclick="window.location.href = 'main.html';"><b>Login</b></button>
-    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;"; onclick="window.location.href = 'signUp.html';"><b>Create an account</b></button>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #FFFFFF; color: #000000;"; onclick="window.location.href = 'main.html';"><b>Login</b></button>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #FFFFFF; color: #000000;"; onclick="window.location.href = 'signUp.html';"><b>Create an account</b></button>
     <p class="mt-5 mb-3 text-muted" style="text-align: center">&copy; 2020-2021</p>
 </form>
 </body>
