--- a/CS230/signUp.html
+++ b/CS230/signUp.html
@@ -10,9 +10,9 @@
     <link href="css/login.css" rel="stylesheet">
 </head>
 <body>
-<form class="form-signin" style="background-color: #1b1e21">
+<form class="form-signin" style="background-color: #96bf67">
     <img class="rounded mx-auto d-block" src="assets/login-logo.png" alt="" width="72px" height="90px">
-    <h1 class="h3 mb-3 font-weight-normal" style="color: whitesmoke; text-align: center;">Please sign in</h1>
+    <h1 class="h3 mb-3 font-weight-normal" style="color: #000000; text-align: center;">Please sign in</h1>
     <label for="inputEmail" class="sr-only">Username</label>
     <input type="email" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
     <label for="inputEmail" class="sr-only">Email address</label>
@@ -21,11 +21,11 @@
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
     <div class="checkbox mb-3">
         <input type="checkbox" value="remember-me" >
-        <label style="color: #ffffff"> Remember me</label>
+        <label style="color: #000000"> Remember me</label>
     </div>
-    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;"; onclick="window.location.href = 'main.html';"><b>Submit</b></button>
-    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;"; onclick="window.location.href = 'login.html';"><b>Have an account? Login</b></button>
-    <button class="btn btn-lg btn-block" type="submit" style="background-color: #990000; color: whitesmoke;"; onclick="window.location.href = 'freshStart.html';"><b> Create Garden w/o Account</b></button>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #FFFFFF; color: #000000;"; onclick="window.location.href = 'main.html';"><b>Submit</b></button>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #FFFFFF; color: #000000;"; onclick="window.location.href = 'login.html';"><b>Have an account? Login</b></button>
+    <button class="btn btn-lg btn-block" type="submit" style="background-color: #FFFFFF; color: #000000;"; onclick="window.location.href = 'main2.html';"><b> Create Garden w/o Account</b></button>
     <p class="mt-5 mb-3 text-muted" style="text-align: center">&copy; 2020-2021</p>
 </form>
 </body>
