--- a/CS230/login.html
+++ b/CS230/login.html
@@ -12,7 +12,7 @@
 <body>
 <form class="form-signin" style="background-color: #96bf67">
     <img class="rounded mx-auto d-block" src="assets/login-logo.png" alt="" width="72px" height="90px">
-    <h1 class="h3 mb-3 font-weight-normal" style="color: #000000; text-align: center;">Please sign in</h1>
+    <h1 class="h3 mb-3 font-weight-normal" style="color: #000000; text-align: center;">Please log in</h1>
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
