--- a/CS230/main2.html
+++ b/CS230/main2.html
@@ -22,6 +22,7 @@
   <script src="updateTable.js"></script>
   <script src="moveSeeds.js"></script>
   <script src="climateControl.js"></script>
+  <script src="seedDetails.js"></script>
 </head>
 
 <body>
@@ -32,18 +33,18 @@
         <a class="navbar-brand" href="#">ACME Seeds</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li class="active"><a href="sharedGardens.html">Other Gardens</a></li>
+        <li class="active"><a href="#">Home</a></li> <!-- ; onclick="window.location.href = 'main2.html';" -->
+        <li class="active"><a href="sharedGardensNotLoggedIn.html">Other Gardens</a></li> <!-- ; onclick="window.location.href = 'freshStart.html';" -->
         <!-- <li class="active"; onclick="window.location.href = 'freshStart.html';"><a href="#">Create New</a></li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
       <!--<li><a href="#"><span class="form-group"></span> <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Username"></a></li>
       <li><a href="#"><span class="form-group"></span> <input type="password" class="form-control" id="inputPassword" placeholder="Password"></a></li>-->
+      <!-- <li class="active"; onclick="window.location.href = 'main.html';"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li> -->
+      <!-- <li class="active"; onclick="window.location.href = 'login.html';"><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li> -->
       <li class="active"; onclick="window.location.href = 'login.html';"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       <li class="active"; onclick="window.location.href = 'signUp.html';"><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="#"><span class="glyphicon glyphicon-usd"></span> Seed Checkout</a></li>
-      <!-- <li><a href="#" onclick="saveGarden()"><span class="glyphicon glyphicon-floppy-disk"></span> Save Garden</a></li> -->
-      <!-- <li><a href="#" onclick="shareGarden()"><span class="glyphicon glyphicon-open"></span> Share Garden</a></li> -->
 
     </ul>
     </div>
@@ -56,9 +57,18 @@
     <div class="col-sm-2 pt-3" style="text-align: center">
 
       <h3>Garden Details</h3>
-      <p>Shows details of the garden (cost, totals for seeds, etc.)</p>
-      <button class="btn btn-outline-default" onclick="">Select Template</button>
-      <button class="btn btn-outline-default" onclick="">Create Template</button>
+
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuTemplate" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Select Template <span class="caret"></span>
+        </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuTemplate">
+            <button class="resize-item" id="resize1" type="button" onclick="resize3(); changeUnit1()">Micro</button>
+            <button class="resize-item" id="resize2" type="button" onclick="resize1(); changeUnit4()">Big</button>
+            <button class="resize-item" id="resize3" type="button" onclick="resizeOriginal(); changeUnitOriginal()">Original</button>
+          </div>
+        </div>
+
       <!-- <div class="dropdown" style="display: inline-block">
         <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
           Resize <span class="caret"></span>
@@ -72,44 +82,57 @@
             <a href="#">360X420</a>
         </div>
       </div> -->
+  <table class="table table-dark">
+    <tbody>
+      <tr><td><button class="btn btn-outline-default" onclick="alert('Template Created!')">Create Template</button></td></tr>
+      <tr><td>
       <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Resize <span class="caret"></span>
         </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-            <button class="resize-item" id="resize1" type="button" onclick="resize1()">500X400</button>
-            <button class="resize-item" id="resize2" type="button" onclick="resize2()">400X400</button>
-            <button class="resize-item" id="resize3" type="button" onclick="resize3()">300X200</button>
+            <button class="resize-item" id="resize1" type="button" onclick="resize1()">50ftX40ft</button>
+            <button class="resize-item" id="resize2" type="button" onclick="resize2()">40ftX40ft</button>
+            <button class="resize-item" id="resize3" type="button" onclick="resize3()">30ftX20ft</button>
             <button class="resize-item" id="resize3" type="button" onclick="resizeOriginal()">Original</button>
           </div>
         </div>
+      </td></tr>
+      <tr><td>
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Unit Scale <span class="caret"></span>
+          </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+              <button class="resize-item" id="resize1" type="button" onclick="changeUnit1()">1ft</button>
+              <button class="resize-item" id="resize2" type="button" onclick="changeUnit2()">2ft</button>
+              <button class="resize-item" id="resize3" type="button" onclick="changeUnit3()">4ft</button>
+              <button class="resize-item" id="resize3" type="button" onclick="changeUnitOriginal()">Original</button>
+            </div>
+          </div>
+        </td></tr>
+        <tr><td>
+      <div class="dropdown" style="display: inline-block">
+        <button class="btn btn-default dropdown-toggle" onclick="climateSelection()" type="button" data-toggle="dropdown">
+          Climate <span class="caret"></span>
+        </button>
+        <div id="climateDropdown" class="dropdown-content">
+            <a href="#" onclick="alert('Climate changed to temperate')">Temperate</a>
+            <a href="#" onclick="alert('Climate changed to cold')">Cold</a>
+            <a href="#" onclick="alert('Climate changed to dry')">Dry</a>
+            <a href="#" onclick="alert('Climate changed to wet')">Wet</a>
+        </div>
+      </div>
+    </td></tr>
+    </tbody>
+  </table>
 
-      <button class="btn btn-outline-default" onclick="">Unit Scale</button>
-      <button class="btn btn-outline-default">Change Climate</button>
-
-      <p>Garden Cost: $9000.01</p>
-      <p>Total Seeds Purchased: 100</p>
+      <p>Garden Cost: <br>$9000.01</p>
+      <p>Total Seeds: <br>100</p>
 
     </div>
 
     <div class="col-sm-6 pt-3" style="text-align: center">
-      <!--<h1 class="text-hide" style="background-image: url('assets/empty-grid-component.png'); width: 50px; height: 50px;">GridComponent</h1>-->
-      <!-- <table class="table table-bordered" id="gardenGrid">
-        <tbody>
-          <tr>
-            <td ondrop="drop(event)"><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
-            <td ondrop="drop(event)"><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
-            <td ondrop="drop(event)"><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
-            <td ondrop="drop(event)"><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
-          </tr>
-          <tr>
-            <td><img src="assets/empty-grid-component.png" class="droppable" alt="Something goes here and IDK what"></td>
-            <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
-            <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
-            <td><img src="assets/empty-grid-component.png" class="rounded float-left" alt="Something goes here and IDK what"></td>
-          </tr>
-      </tbody>
-      </table> -->
       <canvas id='canvas' width='600' height='360' style="border: 1px solid black;">
       </canvas>
 
@@ -132,33 +155,21 @@
         </button>
         <div id="seedDropdown" class="dropdown-content">
           <input class="form-control" type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-            <a href="#">Sunflower</a>
-            <a href="#">Rose</a>
-            <a href="#">Tulip</a>
-            <a href="#">Normal</a>
-            <a href="#">Dahlia</a>
-            <a href="#">Daffodil</a>
+          <a href="#" onclick=sunflowerDetails()>Sunflower</a>
+          <a href="#" onclick=roseDetails()>Rose</a>
+          <a href="#" onclick=tulipDetails()>Tulip</a>
+          <a href="#" onclick=dahliaDetails()>Dahlia</a>
+          <a href="#" onclick=daffodilDetails()>Daffodil</a>
         </div>
       </div>
-      <div class="dropdown" style="display: inline-block">
-        <button class="btn btn-default dropdown-toggle" onclick="climateSelection()" type="button" data-toggle="dropdown">
-          Climate <span class="caret"></span>
-        </button>
-        <div id="climateDropdown" class="dropdown-content">
-            <a href="#">Temperate</a>
-            <a href="#">Cold</a>
-            <a href="#">Dry</a>
-            <a href="#">Wet</a>
-        </div>
-      </div>
+
+
       <table class="calendartable table-bordered" style="margin-top: 50px">
         <tbody>
           <tr>
-            <!--th scope="row"></th-->
             <th colspan="4" style="text-align: center"><p>Calendar Reference</p></th>
           </tr>
           <tr>
-            <!--th scope="row"></th-->
             <td><p>Jan-Mar</p></td>
             <td><p>Apr-Jun</p></td>
             <td><p>Jul-Sept</p></td>
@@ -187,7 +198,57 @@
           </tr>
       </tbody>
     </table>
-
+    <button class="btn btn-outline-default" onclick="window.location.href = 'calendar.html';">Go to Calendar</button>
+    <div style="display: none" id=sunflowerDetails>
+      <div class="card" onclick="sunflowerDetails()" style="width: 20rem;">
+        <img class="seed" src="assets/Sunflower.png" alt="Sunflower">
+        <div class="card-body">
+          <h5 class="card-title">Sunflower Seed</h5>
+          <p class="card-text">Sunflower seed details are in this text block Sunflower seed details are in this text block Sunflower seed details are in this text block Sunflower seed details are in this text block </p>
+          <a href="#" class="btn btn-primary">Plant</a>
+        </div>
+      </div>
+    </div>
+    <div style="display: none" id=roseDetails>
+      <div class="card" onclick="roseDetails()" style="width: 20rem;">
+        <img class="seed" src="assets/Rose.png" alt="Rose">
+        <div class="card-body">
+          <h5 class="card-title">Rose Seed</h5>
+          <p class="card-text">Rose seed details are in this text block</p>
+          <a href="#" class="btn btn-primary">Plant</a>
+        </div>
+      </div>
+    </div>
+    <div style="display: none" id=tulipDetails>
+      <div class="card" onclick="tulipDetails()" style="width: 20rem;">
+        <img class="seed" src="assets/Tulip.png" alt="Rose">
+        <div class="card-body">
+          <h5 class="card-title">Tulip Seed</h5>
+          <p class="card-text">Tulip seed details are in this text block</p>
+          <a href="#" class="btn btn-primary">Plant</a>
+        </div>
+      </div>
+    </div>
+    <div style="display: none" id=dahliaDetails>
+      <div class="card" onclick="dahliaDetails()" style="width: 20rem;">
+        <img class="seed" src="assets/dahlia.png" alt="Rose">
+        <div class="card-body">
+          <h5 class="card-title">Dahlia Seed</h5>
+          <p class="card-text">Dahlia seed details are in this text block</p>
+          <a href="#" class="btn btn-primary">Plant</a>
+        </div>
+      </div>
+    </div>
+    <div style="display: none" id=daffodilDetails>
+      <div class="card" onclick="daffodilDetails()" style="width: 20rem;">
+        <img class="seed" src="assets/Daffodil.png" alt="Rose">
+        <div class="card-body">
+          <h5 class="card-title">Daffodil Seed</h5>
+          <p class="card-text">Daffodil seed details are in this text block</p>
+          <a href="#" class="btn btn-primary">Plant</a>
+        </div>
+      </div>
+    </div>
   </div>
   </div>
 </div>
