quick change to main for logout button

--- a/CS230/main.html
+++ b/CS230/main.html
@@ -43,6 +43,7 @@
       <!-- <li class="active"; onclick="window.location.href = 'main.html';"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li> -->
       <!-- <li class="active"; onclick="window.location.href = 'login.html';"><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li> -->
       <li><a href="#"><span class="glyphicon glyphicon-usd"></span> Seed Checkout</a></li>
+      <li class="active"; onclick="window.location.href = 'login.html';"><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
       <li><a href="#" onclick="saveGarden()"><span class="glyphicon glyphicon-floppy-disk"></span> Save Garden</a></li>
       <li><a href="#" onclick="shareGarden()"><span class="glyphicon glyphicon-open"></span> Share Garden</a></li>
 
