--- a/CS230/main.html
+++ b/CS230/main.html
@@ -139,12 +139,12 @@
       </canvas>
 
       <div id="seedcontainer" style="margin-top: 60px">
-      <div id="seeds">
-        <img class="seed" src="assets/Daffodil.png" alt="Sunflower">
-        <img class="seed" src="assets/Dahlia.png" alt="Sunflower">
-        <img class="seed" src="assets/Rose.png" alt="Sunflower">
-        <img class="seed" src="assets/Sunflower.png" alt="Sunflower">
-        <img class="seed" src="assets/Tulip.png" alt="Sunflower">
+      <div id="seeds" style="display: inline-block">
+        <img class="seed" src="assets/Daffodil.png" alt="Sunflower" id="plantDaffodil"  style="display: none;">
+        <img class="seed" src="assets/Dahlia.png" alt="Sunflower" id = "plantDahlia"  style="display: none;">
+        <img class="seed" src="assets/Rose.png" alt="Sunflower" id="plantRose"  style="display: none;">
+        <img class="seed" src="assets/Sunflower.png" alt="Sunflower" id="plantSunflower" style="display: none;">
+        <img class="seed" src="assets/Tulip.png" alt="Sunflower" id="plantTulip"  style="display: none;">
     </div>
     </div>
 
@@ -202,52 +202,52 @@
     </table>
     <button class="btn btn-outline-default" onclick="window.location.href = 'calendar.html';">Go to Calendar</button>
     <div style="display: none" id=sunflowerDetails>
-      <div class="card" onclick="sunflowerDetails()" style="width: 20rem;">
-        <img class="seed" src="assets/Sunflower.png" alt="Sunflower">
+      <div class="card" onclick="sunflowerDetails()" style="width: 20rem;margin-left: auto;margin-right: auto">
+        <img src="assets/Sunflower.png" alt="Sunflower">
         <div class="card-body">
           <h5 class="card-title">Sunflower Seed</h5>
           <p class="card-text">Sunflower seed details are in this text block Sunflower seed details are in this text block Sunflower seed details are in this text block Sunflower seed details are in this text block </p>
-          <a href="#" class="btn btn-primary">Plant</a>
+          <a href="#" class="btn btn-primary" onclick="plantSunflower()">Plant</a>
         </div>
       </div>
     </div>
     <div style="display: none" id=roseDetails>
-      <div class="card" onclick="roseDetails()" style="width: 20rem;">
-        <img class="seed" src="assets/Rose.png" alt="Rose">
+      <div class="card" onclick="roseDetails()" style="width: 20rem;margin-left: auto;margin-right: auto">
+        <img src="assets/Rose.png" alt="Rose">
         <div class="card-body">
           <h5 class="card-title">Rose Seed</h5>
           <p class="card-text">Rose seed details are in this text block</p>
-          <a href="#" class="btn btn-primary">Plant</a>
+          <a href="#" class="btn btn-primary" onclick="plantRose()">Plant</a>
         </div>
       </div>
     </div>
     <div style="display: none" id=tulipDetails>
-      <div class="card" onclick="tulipDetails()" style="width: 20rem;">
-        <img class="seed" src="assets/Tulip.png" alt="Rose">
+      <div class="card" onclick="tulipDetails()" style="width: 20rem;margin-left: auto;margin-right: auto">
+        <img src="assets/Tulip.png" alt="Tulip">
         <div class="card-body">
           <h5 class="card-title">Tulip Seed</h5>
           <p class="card-text">Tulip seed details are in this text block</p>
-          <a href="#" class="btn btn-primary">Plant</a>
+          <a href="#" class="btn btn-primary" onclick="plantTulip()">Plant</a>
         </div>
       </div>
     </div>
     <div style="display: none" id=dahliaDetails>
-      <div class="card" onclick="dahliaDetails()" style="width: 20rem;">
-        <img class="seed" src="assets/dahlia.png" alt="Rose">
+      <div class="card" onclick="dahliaDetails()" style="width: 20rem;margin-left: auto;margin-right: auto">
+        <img src="assets/Dahlia.png" alt="Dahlia">
         <div class="card-body">
           <h5 class="card-title">Dahlia Seed</h5>
           <p class="card-text">Dahlia seed details are in this text block</p>
-          <a href="#" class="btn btn-primary">Plant</a>
+          <a href="#" class="btn btn-primary" onclick="plantDahlia()">Plant</a>
         </div>
       </div>
     </div>
     <div style="display: none" id=daffodilDetails>
-      <div class="card" onclick="daffodilDetails()" style="width: 20rem;">
-        <img class="seed" src="assets/Daffodil.png" alt="Rose">
+      <div class="card" onclick="daffodilDetails()" style="width: 20rem;margin-left: auto;margin-right: auto">
+        <img src="assets/Daffodil.png" alt="Daffodil">
         <div class="card-body">
           <h5 class="card-title">Daffodil Seed</h5>
           <p class="card-text">Daffodil seed details are in this text block</p>
-          <a href="#" class="btn btn-primary">Plant</a>
+          <a href="#" class="btn btn-primary" onclick="plantDaffodil()">Plant</a>
         </div>
       </div>
     </div>
